--- a/world_demographic_analyze.ipynb
+++ b/world_demographic_analyze.ipynb
@@ -6,7 +6,7 @@
       "name": "world_demographic_analyze.ipynb",
       "provenance": [],
       "mount_file_id": "1ITcCtKaqCuEiutJplP16WIaoxAb0izja",
-      "authorship_tag": "ABX9TyPxjCW/BYJNichaU8nv3I1l",
+      "authorship_tag": "ABX9TyNPtQ1iBUVyF4zGGNtCAywW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,7 +160,7 @@
       "source": [
         "df[\"Region\"].unique()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -634,7 +634,7 @@
         "sns.heatmap(covar_mat)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -648,6 +648,26 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PtKT3NFsTZhr"
+      },
+      "source": [
+        "Now we create the final app using dash and plotly libraries, the code of which is attched to the github link and then we deploy it to heroku"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2QlJ4VjgTlHx"
+      },
+      "source": [
+        "Heroku link : [Dashboard-world-demograpic](https://dashboard-world-demographic.herokuapp.com/)\n",
+        "\n",
+        "\n"
       ]
     }
   ]
